--- a/foundation-backend/.env.example
+++ b/foundation-backend/.env.example
@@ -1,14 +1,54 @@
-# Environment variables for local development
-# Copy this file to .env and fill in your actual values
-# DO NOT commit .env to version control
+# ===================================
+# Backend Environment Variables
+# ===================================
 
-# Database Configuration
-DB_URL=jdbc:postgresql://localhost:5432/foundation_db
-DB_USERNAME=foundation_user
-DB_PASSWORD=foundation_pass
+# DATABASE CONFIGURATION
+# For local development, use PostgreSQL running locally
+# For production, use your cloud database URL (Neon, AWS RDS, etc.)
+DATABASE_URL=jdbc:postgresql://localhost:5432/ngo_donations?sslmode=prefer
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=your_db_password_here
 
-# Stripe Configuration
-STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+# SQL INITIALIZATION
+# Set to 'never' in production to prevent sample data loading
+SQL_INIT_MODE=always
+
+# FRONTEND CONFIGURATION
+# Update this to match your deployed frontend URL
+FRONTEND_URL=http://localhost:5173
+
+# STRIPE CONFIGURATION
+# Get these from https://dashboard.stripe.com/test/apikeys
+STRIPE_SECRET_KEY=sk_test_your_stripe_test_key_here
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
-STRIPE_SUCCESS_URL=http://localhost:3000/donate/success?session_id={CHECKOUT_SESSION_ID}
-STRIPE_CANCEL_URL=http://localhost:3000/donate/cancel
+
+# Stripe Redirect URLs (update for production)
+STRIPE_SUCCESS_URL=http://localhost:5173/donate/success?session_id={CHECKOUT_SESSION_ID}
+STRIPE_CANCEL_URL=http://localhost:5173/donate/cancel
+
+# EMAIL CONFIGURATION (Gmail SMTP)
+# For Gmail: Enable 2FA and generate an App Password
+# Instructions: https://support.google.com/accounts/answer/185833
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=465
+MAIL_USERNAME=your-email@gmail.com
+MAIL_PASSWORD=your-gmail-app-password
+
+# ===================================
+# ENVIRONMENT-SPECIFIC EXAMPLES
+# ===================================
+
+# LOCAL DEVELOPMENT (Stripe CLI for webhooks):
+# 1. Run: stripe listen --forward-to http://localhost:8080/api/donations/stripe/webhook
+# 2. Copy the webhook secret starting with whsec_
+# 3. Set STRIPE_WEBHOOK_SECRET to that value
+
+# STAGING/PRODUCTION:
+# 1. Deploy backend to your hosting service
+# 2. Add webhook endpoint in Stripe Dashboard:
+#    - URL: https://your-backend-url.com/api/donations/stripe/webhook
+#    - Events: checkout.session.completed, checkout.session.async_payment_succeeded, 
+#              checkout.session.async_payment_failed, checkout.session.expired
+# 3. Copy webhook signing secret from Stripe Dashboard
+# 4. Set all environment variables in your hosting service
+
