Fix: Replace all hardcoded localhost URLs with environment variable
- Exported API_BASE_URL from api.ts to use across all components
- Replaced 20+ hardcoded localhost:8080 URLs in admin pages
- Fixed AdminLogin to use environment variable for auth endpoint
- Updated SecurityConfig to allow Vercel origin in CORS
- Added debug logging for security and CORS troubleshooting
- All API calls now respect VITE_API_BASE_URL environment variable

This fixes the 403 errors when accessing the deployed frontend on Vercel.

--- a/foundation-backend/src/main/resources/application.yml
+++ b/foundation-backend/src/main/resources/application.yml
@@ -66,5 +66,8 @@ stripe:
 logging:
   level:
     com.myfoundation.school: INFO
+    com.myfoundation.school.security: DEBUG
+    org.springframework.security: DEBUG
+    org.springframework.web.cors: DEBUG
     org.hibernate.SQL: DEBUG
     org.springframework.web.servlet.resource: WARN
